testsuite/tests/checks/default_parameters/test.out
default_parameters.ads:1:34: error: parameter with default value
1 | procedure P (I : in out Integer; J : Integer := 0);   --  FLAG
  |                                  ^ 

